--- a/Items.html
+++ b/Items.html
@@ -5,17 +5,188 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Our Items</title>
   <style>
-    body { font-family: Arial, sans-serif; padding: 40px; background: #d2b48c; color: #333; text-align: center; }
+    body {
+      font-family: Arial, sans-serif;
+      padding: 40px;
+      background: #d2b48c;
+      color: #333;
+      text-align: center;
+    }
     h1 { color: #8b5a2b; }
-    .container { background: #fff8dc; padding: 20px; border-radius: 8px; display: inline-block; }
-    a { display: inline-block; margin-top: 20px; padding: 10px 20px; background: #8b5a2b; color: white; text-decoration: none; border-radius: 5px; }
+    .container {
+      background: #fff8dc;
+      padding: 20px;
+      border-radius: 8px;
+      display: inline-block;
+      width: 80%;
+    }
+    .product {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      background: white;
+      padding: 15px;
+      border-radius: 10px;
+      margin: 15px 0;
+      box-shadow: 2px 2px 10px rgba(0,0,0,0.1);
+    }
+    .product img {
+      width: 120px;
+      height: auto;
+      border-radius: 5px;
+    }
+    .product-info {
+      flex-grow: 1;
+      padding: 0 15px;
+      text-align: left;
+    }
+    select {
+      padding: 5px;
+    }
+    .buy-btn, .purchase-btn, .home-btn {
+      padding: 10px 15px;
+      background: #8b5a2b;
+      color: white;
+      text-decoration: none;
+      border-radius: 5px;
+      font-weight: bold;
+      cursor: pointer;
+      border: none;
+      margin-top: 10px;
+    }
+    .cart {
+      margin-top: 20px;
+      padding: 15px;
+      background: white;
+      border-radius: 10px;
+      box-shadow: 2px 2px 10px rgba(0,0,0,0.1);
+    }
   </style>
 </head>
 <body>
   <div class="container">
     <h1>Our Items</h1>
-    <p>Explore our products and services.</p>
-    <a href="index.html">Back to Home</a>
+
+    <div class="product">
+      <img src="Yellow Special Sandwich Promotional Facebook Post.png" alt="Special Sandwich">
+      <div class="product-info">
+        <h2>Special Sandwich</h2>
+        <p>Freshly made sandwich with crispy toast, veggies, and cheese.</p>
+        <label for="size1">Size:</label>
+        <select id="size1">
+          <option value="Small-20">Small - ₱20</option>
+          <option value="Medium-30">Medium - ₱30</option>
+          <option value="Large-40">Large - ₱40</option>
+        </select>
+      </div>
+      <button class="buy-btn" onclick="addToCart('Special Sandwich', 'size1')">Add to Cart</button>
+    </div>
+
+    <div class="product">
+      <img src="Hot Coffee Instagram Post.png" alt="Hot Coffee">
+      <div class="product-info">
+        <h2>Hot Coffee</h2>
+        <p>Rich and creamy hot coffee to energize your day.</p>
+        <label for="size2">Size:</label>
+        <select id="size2">
+          <option value="Small-20">Small - ₱20</option>
+          <option value="Medium-30">Medium - ₱30</option>
+          <option value="Large-40">Large - ₱40</option>
+        </select>
+      </div>
+      <button class="buy-btn" onclick="addToCart('Hot Coffee', 'size2')">Add to Cart</button>
+    </div>
+
+    <div class="product">
+      <img src="Brown and Beige Minimalist Monotone Coffee Shop Sale Instagram Post.png" alt="Cold Cappuccino">
+      <div class="product-info">
+        <h2>Cold Cappuccino</h2>
+        <p>Refreshing cold cappuccino with caramel drizzle.</p>
+        <label for="size3">Size:</label>
+        <select id="size3">
+          <option value="Small-20">Small - ₱20</option>
+          <option value="Medium-30">Medium - ₱30</option>
+          <option value="Large-40">Large - ₱40</option>
+        </select>
+      </div>
+      <button class="buy-btn" onclick="addToCart('Cold Cappuccino', 'size3')">Add to Cart</button>
+    </div>
+
+    <div class="cart">
+      <h2>Shopping Cart</h2>
+      <ul id="cart-items"></ul>
+      <h3>Total: ₱<span id="total-price">0</span></h3>
+
+      <label for="payment-method">Select Payment Method:</label>
+      <select id="payment-method">
+        <option value="GCash">GCash</option>
+        <option value="PayMaya">PayMaya</option>
+        <option value="Cash on Delivery">Cash on Delivery</option>
+      </select>
+
+      <button class="purchase-btn" onclick="purchaseItems()">Purchase</button>
+    </div>
+
+    <button class="home-btn" onclick="goHome()">Back to Home</button>
   </div>
+
+  <script>
+    let cart = [];
+
+    function addToCart(item, sizeId) {
+      let sizeSelect = document.getElementById(sizeId);
+      let selectedOption = sizeSelect.options[sizeSelect.selectedIndex].value.split("-");
+      let size = selectedOption[0];
+      let price = parseInt(selectedOption[1]);
+
+      cart.push({ item, size, price });
+      updateCart();
+    }
+
+    function updateCart() {
+      let cartList = document.getElementById("cart-items");
+      let totalPriceElement = document.getElementById("total-price");
+      cartList.innerHTML = "";
+      let total = 0;
+
+      cart.forEach((product, index) => {
+        total += product.price;
+        let listItem = document.createElement("li");
+        listItem.innerHTML = `${product.item} (${product.size}) - ₱${product.price} <button onclick="removeFromCart(${index})">Remove</button>`;
+        cartList.appendChild(listItem);
+      });
+
+      totalPriceElement.innerText = total;
+    }
+
+    function removeFromCart(index) {
+      cart.splice(index, 1);
+      updateCart();
+    }
+
+    function purchaseItems() {
+      if (cart.length === 0) {
+        alert("Your cart is empty. Add items before purchasing.");
+        return;
+      }
+
+      let total = cart.reduce((sum, product) => sum + product.price, 0);
+      let orderDetails = cart.map(product => `${product.item} (${product.size}) - ₱${product.price}`).join("\n");
+
+      let paymentMethod = document.getElementById("payment-method").value;
+
+      let confirmPurchase = confirm(`Order Summary:\n${orderDetails}\n\nTotal: ₱${total}\nPayment Method: ${paymentMethod}\n\nProceed with purchase?`);
+      if (confirmPurchase) {
+        alert(`Thank you for your purchase! Your total is ₱${total}. Payment Method: ${paymentMethod}.`);
+        cart = []; // Clear cart after purchase
+        updateCart();
+      }
+    }
+
+    function goHome() {
+      window.location.href = "index.html"; // Redirects user to home page
+    }
+  </script>
+
 </body>
 </html>
